--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -15,7 +15,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Install Conan
+      id: conan
+      uses: turtlebrowser/get-conan@main
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
