--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,25 @@ if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
 endif()
 
+if(NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
+   message(STATUS "Downloading conan.cmake from https://github.com/conan-io/cmake-conan")
+   file(DOWNLOAD "https://raw.githubusercontent.com/conan-io/cmake-conan/master/conan.cmake" "${CMAKE_BINARY_DIR}/conan.cmake")
+endif()
+include(${CMAKE_BINARY_DIR}/conan.cmake)
+conan_cmake_run(
+	REQUIRES
+		${CONAN_EXTRA_REQUIRES}
+		cmake_findboost_modular/1.69.0@bincrafters/stable
+    	boost/1.73.0
+    	gtest/1.10.0
+	${CONAN_EXTRA_OPTIONS}
+    BASIC_SETUP
+    CMAKE_TARGETS
+    BUILD missing
+)
+include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+conan_basic_setup()
+
 include(CTest)
 enable_testing()
 find_package(GTest REQUIRED)
