--- a/utils/channel/CMakeLists.txt
+++ b/utils/channel/CMakeLists.txt
@@ -1,6 +1,6 @@
-#channel.hpp ichannel.hpp input.hpp ochannel.hpp output.hpp transform.hpp
 add_library(utils-channel INTERFACE)
 target_include_directories(utils-channel INTERFACE ${CMAKE_SOURCE_DIR})
+
 add_executable(utils-channel-test test.cpp)
-target_link_libraries(utils-channel-test PUBLIC utils-channel GTest::GTest GTest::Main)
-gtest_discover_tests(utils-channel-test)
+target_link_libraries(utils-channel-test PUBLIC utils-channel Boost::unit_test_framework Boost::system)
+add_test(NAME utils-channel COMMAND utils-channel-test)
