--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -39,14 +39,14 @@ jobs:
           }
 
     steps:
-    - name: Install boost
-      uses: MarkusJx/install-boost@v1.0.1
-      id: install-boost
+    - name: Build Boost
+      id: boost
+      uses: egor-tensin/build-boost@v1
       with:
-        # REQUIRED: Specify the required boost version
-        # A list of supported versions can be found here: 
-        # https://github.com/actions/boost-versions/blob/main/versions-manifest.json
-        boost_version: 1.75.0
+        version: 1.75.0
+        libraries: filesystem program_options system unit_test_framework
+        platform: x64
+        configuration: Release
 
     - uses: actions/checkout@v1
 
