--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -39,7 +39,7 @@ jobs:
       uses: egor-tensin/build-boost@v1
       with:
         version: 1.76.0
-        libraries: program_options system test date_time
+        libraries: program_options system test date_time headers json fiber container serialization stacktrace
         platform: x64
         configuration: Release
 
