fix all test to use boost

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(channel)
 add_subdirectory(stream)
+add_subdirectory(regex)
 
 #add_library(utils test.cpp)
 #target_include_directories(utils-stream PUBLIC ${CMAKE_SOURCE_DIR})
