--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,20 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 
 include(CTest)
+Include(FetchContent)
 
 enable_testing()
 
 find_package(Boost 1.75.0 COMPONENTS iostreams REQUIRED)
-find_package(Catch2 3 REQUIRED)
+find_package(Catch2 3)
+if(NOT Catch2)
+   FetchContent_Declare(
+   Catch2
+   GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+   GIT_TAG        v3.0.0-preview3
+   )
+   FetchContent_MakeAvailable(Catch2)
+endif()
 
 add_subdirectory(utils)
 #add_subdirectory(lexer)
